@@ -1,0 +1,46 @@
+<?php
+
+/**
+ * Smarty Method GetGlobal
+ *
+ * Smarty::getGlobal() method
+ *
+ * @package    Smarty
+ * @subpackage PluginsInternal
+ * @author     Uwe Tews
+ */
+class Smarty_Internal_Method_GetGlobal
+{
+    /**
+     * Valid for all objects
+     *
+     * @var int
+     */
+    public $objMap = 7;
+
+    /**
+     * Returns a single or all global  variables
+     *
+     * @api  Smarty::getGlobal()
+
+     * @param  string $varName variable name or null
+     *
+     * @return string variable value or or array of variables
+     */
+    public function getGlobal(Smarty_Internal_Data $data, $varName = null)
+    {
+        if (isset($varName)) {
+            if (isset(Smarty::$global_tpl_vars[ $varName ])) {
+                return Smarty::$global_tpl_vars[ $varName ]->value;
+            } else {
+                return '';
+            }
+        } else {
+            $_result = array();
+            foreach (Smarty::$global_tpl_vars AS $key => $var) {
+                $_result[ $key ] = $var->value;
+            }
+            return $_result;
+        }
+    }
+}
